--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-time-picker": "^8.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
