--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-time-picker": "^8.0.2",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
