--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
     "lucide": "^0.546.0",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
@@ -30,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-time-picker": "^8.0.2",
     "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
