--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
+    "vercel": "^48.10.11",
     "zod": "^4.1.12"
   },
   "devDependencies": {
