--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-time-picker": "^8.0.2",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
