--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.1",
+    "react-infinite-scroll-hook": "^6.0.1",
     "react-time-picker": "^8.0.2",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
