--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.8.13",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
     "lucide": "^0.546.0",
@@ -37,6 +38,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
     "react-infinite-scroll-hook": "^6.0.1",
